--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,7 +1,4 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-
-
-
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
@@ -21,12 +18,14 @@ html {
 
 header{
   text-align: center;
+  background-image: url("Images/sky.jpg");
   background-color: lightskyblue;
 }
 
 body {
   margin: 0;
   background-color: lightblue;
+
 }
 
 
@@ -76,10 +75,16 @@ header{
   height:300px;
 }
 
-.score{
-  width:75px;
-  height:25px;
+.pictures1{
+  width:200px;
+  height:100px;
 }
+.pictures2{
+  width:200px;
+  height:200px;
+}
+
+
 
 
 /* HTML5 display definitions
